# speech-aligner

./: .gitignore  README-finetune.md  README.md  pyproject.toml  requirements-nemo.txt  requirements.txt  setup_env.sh
config/: __init__.py  config.py
data/asr/: speaker_assignment.json
data/lm/: unigrams.txt
data/transcripts-v3/: transcript_001.txt  transcript_002.txt  transcript_003.txt  transcript_004.txt  transcript_005.txt  transcript_006.txt  transcript_007.txt  transcript_008.txt  transcript_009.txt  transcript_010.txt  transcript_011.txt  transcript_012.txt  transcript_013.txt  transcript_014.txt  transcript_015.txt  transcript_016.txt  transcript_017.txt  transcript_018.txt  transcript_019.txt  transcript_020.txt  transcript_021.txt  transcript_022.txt  transcript_023.txt  transcript_024.txt
docs/: dataset-info.txt  expt-metadata-format.txt  fine-tune-phase.txt  multi-expt-comparison-metadata-format.txt  number-recognition-stats.txt  pipeline-guide.md  resync-fix.txt
docs/experiment-logs/: 7driftfiles-postresync_parakeetrnnt1.1b_resyncexpt.metadata.json  7driftfiles-postresync_parakeetrnnt1.1b_resyncexpt.summary.txt  align-stage-efficacy_summary.txt  all-speakers_parakeetrnnt1.1b_baselineexpt1.metadata.json  all-speakers_parakeetrnnt1.1b_baselineexpt1.summary.txt  comparison-track-list.txt  (+29 more)
scripts/: 00_build_lm.sh  chunk_wer_pattern.py  compare_experiments.sh  review_data_prep.py  run_eval.sh  run_finetune.sh  run_pipeline.sh  run_reports.sh  run_tensorboard.sh  run_training_data.sh  speaker_wer_table.py  tb_metrics.sh
tests/: test_common.py
(+56 files in other folders)
